fixes to navbar stacking, padding on projects#index, times cards on small pages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -75,7 +75,7 @@ ul {
     margin: 20px 0 30px 0;
 
     div {
-        width: 50%;
+        max-width: 400px;
     }
     
     .project-times-dateentry{
